# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml  pylint.yml
gendiff/: __init__.py  data_parser.py  gen_dict_diff.py  generate_diff.py
gendiff/formatters/: formatter.py  getting_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
hexlet-code/: hexlet_code.py
hexlet-code/scripts/: gendiff.py  hexlet_code.py
tests/: correct_answers.py  test_diff_complex_json.py  test_diff_complex_yaml.py  test_diff_json.py  test_diff_yaml.py  test_generate_diff.py  test_json_format.py  test_plain_complex.py  test_plain_flat.py
tests/fixtures/: correct_answers.py  correct_json_complex_result.md  test_plain_complex.py
