[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["SaveDim <jieto35@yandex.ru>"]
#Not sure that it's nesessary below
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]
hexlet-code = "hexlet_code.scripts.hexlet_code:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
